postgres-macros/tests/fail-stable/scalar_mismatch.stderr
error[E0277]: the trait bound `Cols: HasScalar<String>` is not satisfied
 --> tests/fail-stable/scalar_mismatch.rs:5:56
  |
5 |     let _: String = sql!("SELECT COUNT(*) FROM users").await.unwrap();
  |                                                       -^^^^^ the trait `HasScalar<String>` is not implemented for `Cols`
  |                                                       |
  |                                                       help: remove the `.await`
  |
  = help: the trait `HasScalar<i64>` is implemented for `Cols`
  = note: required for `String` to implement `Query<Cols>`
  = note: required for `Sql<'_, Cols, String>` to implement `IntoFuture`
